# Santa-2025-Christmas-Tree-Packing-Challenge

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  baseline.cpp  blend_repair  blend_repair.cpp  collision.cpp  collision.hpp  convenience.mk  ensemble_submissions  ensemble_submissions.cpp  ga.cpp  ga.hpp  geom.cpp  geom.hpp  makefile  pyproject.toml  sa.hpp  score_submission  score_submission.cpp  solver_baseline  solver_baseline.cpp  solver_tessellation  solver_tessellation.cpp  solver_tile  solver_tile.cpp  submission.csv  submission_tile_cpp.csv  sweep_blend.py
.github/workflows/: ci.yml
apps/: blend_repair.cpp  bottom_left_pack.cpp  compact_contact.cpp  ensemble_submissions.cpp  grid_shake_pack.cpp  hh_opt.cpp  merge_submissions.cpp  nfp_sanity.cpp  order_opt.cpp  post_opt.cpp  sa_opt.cpp  score_prefix.cpp  score_submission.cpp  solve_all.cpp  solver_baseline.cpp  solver_tessellation.cpp  solver_tile.cpp  tile_density_search.cpp  tree_info.cpp
configs/: README.md  submit.json  submit_strong.json
docs/: ARCHITECTURE.md  ensemble.md  l2o.md  sa.md  setup.md
include/: baseline.hpp  boundary_refine.hpp  cli_parse.hpp  compaction_contact.hpp  ensemble_submissions_cli.hpp  geom.hpp  micro_adjust.hpp  prefix_prune.hpp  sa.hpp  score.hpp  solver_tile_cli.hpp  solver_tile_options.hpp  spatial_grid.hpp  submission_io.hpp  tiling_pool.hpp  wrap_utils.hpp
include/geometry/: collision.hpp  spatial_grid.hpp
include/santa2025/: bottom_left.hpp  collision_index.hpp  constraints.hpp  geometry.hpp  grid_shake.hpp  hyper_heuristic.hpp  lns.hpp  logging.hpp  nfp.hpp  order_hyper_heuristic.hpp  orientation.hpp  packing_stats.hpp  simulated_annealing.hpp  spatial_hash_grid.hpp  submission_csv.hpp  tree_polygon.hpp
include/solvers/: baseline.hpp  boundary_refine.hpp  compaction_contact.hpp  ga.hpp  post_opt.hpp  prefix_prune.hpp  repair.hpp  sa.hpp  solver_tile_options.hpp  tiling_pool.hpp
include/utils/: micro_adjust.hpp  score.hpp  solver_tile_cli.hpp  submission_io.hpp
notebooks/: 01_generate_and_score.ipynb  eazy-optimizer.ipynb  run_l2o.ipynb  run_l2o.py
runs/: tmp_blend.csv  tmp_shift.csv  tmp_tess.csv  tmp_tile_score.csv  tmp_tile_score2.csv  tmp_tile_score_rigid.csv  valid_submissions.list
runs/ai_full_20251218_174820/: ensemble_tess.csv  ensemble_tile.csv
runs/ai_full_cpp_20251218_180054/: blend_repair.csv  ensemble_all.csv  report_per_n.csv
runs/final/: all_candidates.list  ensemble_all.csv  ensemble_all148.csv  ensemble_top120.csv  ensemble_top60.csv  sa_only_seed1.csv  solver_tile_chain500.csv  solver_tile_k1_pool2000_chain800.csv  squeeze_ctrl_a098_sa_seed1.csv  top120.list  top60.list
runs/newpool/: base_breakdown.csv  base_rigid2.csv  br_blend_target20.csv  br_target30.csv  k2_50k.csv  k3_80k.csv  k6_50k.csv  merged_1_60_breakdown.csv  patch_n16_a.csv  patch_n200_only.csv  patch_n200_sa.csv  tess_sa1.csv  test1.csv  test2.csv  test3.csv  tile_k4_density1.csv  tile_k4_density_chain1.csv  tile_k4_density_chain1_br.csv  tile_k4_score_chain1.csv  tile_k6_density_chain1b.csv
runs/pool1_20251217_171905/: ensemble.csv  run_0.csv  run_1.csv  run_2.csv  run_3.csv  run_4.csv  scores.tsv
runs/pool_mild/: blend_5_inputs.csv  blend_5_inputs_refined.csv  blend_sa_v2.csv  ensemble.csv  ensemble_newrigid.csv  ensemble_refined.csv  run_1.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv
runs/runs_smoke/: manifest.jsonl
runs/solo_squeeze_sa_20251217_171810/: log.txt  score.txt  submission.csv
runs/targeted_top_20251218_191143/: ensemble_targeted.csv  oracle_all.csv  report_oracle_all_per_n.csv  report_per_n.csv
runs/tmp/: README.md  breakdown_sorted.csv  full_light_seed2.csv  full_light_seed3.csv  full_light_seed4.csv  full_seed1.csv  n20_light_seed2.csv  n20_light_seed5.csv  n20_light_seed8.csv  n30_from_tess.csv  n30_refine.csv  n30_seed2.csv  refine_lns.csv
runs/tmp_sweep_test/: manifest.jsonl  run_000.csv
runs/tmp_sweep_test2/: manifest.jsonl  out.csv
runs/tmp_zip/: run_000.csv  run_001.csv  submission_baseline_cpp.csv  submission_best.csv  submission_blend_repair_smallblend.csv  submission_blend_repair_smoke.csv  submission_current.csv  submission_ens_94_322.csv  submission_ens_94_541.csv  submission_ens_94_682.csv  submission_ens_94_717.csv  submission_ens_94_798.csv  submission_smoke.csv  submission_tess_baseline_after_ga.csv  submission_tess_ga_smoke.csv  submission_tess_ga_smoke200.csv  (+2 more)
santa_packing/: __init__.py  collisions.py  constants.py  geom_np.py  geometry.py  heatmap_meta.py  l2o.py  lattice.py  main.py  meta_init.py  optimizer.py  packing.py  physics.py  postopt_np.py  scoring.py  submission_format.py  tree.py  tree_bounds.py  tree_data.py  workflow.py
scripts/: auto_tessellation.py  bench_fastcollide.py  build_fastcollide.py  check_regression.sh  cleanup_csvs.py  collect_sa_dataset.py  format.sh  format_check.sh  generate_submission.py  hunt70.py  kaggle_metric_decimal_fix.py  kaggle_metric_repair.py  make_submit.py  merge_submissions_best.py  n_minus_one_transfer.py  portfolio_merge.py  run_ensemble_sweep.py  run_island_search.sh  run_param_sweep.sh  run_targeted_search.sh  score_submission.py  setup_venv.sh  sweep_blend.py  sweep_ensemble.py  train_heatmap_meta.py  train_l2o.py  train_l2o_bc.py  train_meta_init.py
src/: baseline.cpp  bottom_left.cpp  boundary_refine.cpp  collision.cpp  collision_index.cpp  collision_polygons.cpp  collisions.py  compaction_contact.cpp  geom.cpp  geometry.cpp  grid_shake.cpp  heatmap_meta.py  hyper_heuristic.cpp  l2o.py  lattice.py  lns.cpp  main.py  nfp.cpp  optimizer.py  order_hyper_heuristic.cpp  packing.py  packing_stats.cpp  physics.py  postopt_np.py  prefix_prune.cpp  sa.cpp  sa_geometry.hpp  sa_helpers.hpp  sa_refine.cpp  sa_refine_cost.hpp  sa_refine_pick.hpp  score.cpp  scoring.py  setup_fastcollide.py  simulated_annealing.cpp  solver_tile_cli.cpp  spatial_hash_grid.cpp  submission_csv.cpp  submission_io.cpp  tree.py  (+1 more)
submissions/: BEST.txt  scores.tsv  submission_best.csv
tests/: test_geom_np.py  test_scoring_collision.py  test_submission_format.py
(+143 files in other folders)
