[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santa-packing"
version = "0.0.0"
description = "Santa 2025 Christmas Tree Packing Challenge solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.scripts]
santa-generate-submission = "santa_packing.cli.generate_submission:main"
santa-score-submission = "santa_packing.cli.score_submission:main"
santa-make-submit = "santa_packing.cli.make_submit:main"

[project.optional-dependencies]
train = ["jax[cpu]", "matplotlib"]
notebooks = ["ipykernel"]
dev = ["ruff", "pre-commit", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["santa_packing*"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
# Match Ruff's default pycodestyle selection (E4/E7/E9) + Pyflakes (F),
# plus import sorting (I) to replace isort.
select = ["E4", "E7", "E9", "F", "I"]
